# GeneralsGameCode

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DiagnosticTrace.h  README.md  macros.txt  pr_momentum_report.md  pure_device_migration.ps1  relay.py  serve.py  test_mfc.cmake  unify_move_files.md  vcpkg-configuration.json  vcpkg-lock.json  vcpkg.json
Core/Libraries/Source/WWVegas/: CMakeLists.txt  osdep.h
Core/Libraries/Source/WWVegas/WW3D2/: BgfxBackend.cpp  BgfxBackend.h  BgfxBackendState.h  BgfxBackendTextures.cpp  CMakeLists.txt  Citro3dBackend.cpp  Citro3dBackend.h  Citro3dDxtDecode.h  D3D8WebGLImpl.cpp  D3DXStandaloneStubs.cpp  DX8 Rationalizations.txt  DX8 Status.txt  DX8Backend.cpp  DX8Backend.h  DXTUtils.h  DiligentBackend.cpp  DiligentBackend.h  FramGrab.cpp  IRenderBackend.h  PS2Backend.cpp  PS2Backend.h  RenderBackend.cpp  RenderBackend.h  State Management.txt  StubD3D8Device.cpp  StubD3D8Device.h  aabtree.cpp  aabtree.h  agg_def.cpp  agg_def.h  animatedsoundmgr.cpp  animatedsoundmgr.h  assetstatus.cpp  assetstatus.h  bgfxwrapper.cpp  bgfxwrapper.h  bitmaphandler.cpp  bitmaphandler.h  bmp2d.cpp  bmp2d.h  (+151 more)
Core/Libraries/Source/WWVegas/WW3D2/shaders/: fs_passthrough.sc  (+24 more)
Core/Libraries/Source/WWVegas/WWAudio/: AABTreeSoundCullClass.h  AudibleSound.cpp  AudibleSound.h  AudioEvents.h  AudioSaveLoad.cpp  AudioSaveLoad.h  FilteredSound.cpp  FilteredSound.h  Listener.cpp  Listener.h  LogicalListener.cpp  LogicalListener.h  LogicalSound.cpp  LogicalSound.h  PriorityVector.h  Sound3D.cpp  Sound3D.h  SoundBuffer.cpp  SoundBuffer.h  SoundChunkIDs.h  SoundCullObj.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.cpp  SoundSceneObj.h  Threads.cpp  Threads.h  Utils.cpp  Utils.h  WWAudio.cpp  WWAudio.h  listenerhandle.cpp  listenerhandle.h  sound2dhandle.cpp  sound2dhandle.h  sound3dhandle.cpp  sound3dhandle.h  soundhandle.cpp  (+3 more)
Core/Libraries/Source/WWVegas/WWDebug/: wwdebug.cpp  wwdebug.h  wwhack.h  wwmemlog.cpp  wwmemlog.h  wwprofile.cpp  wwprofile.h
Core/Libraries/Source/WWVegas/WWDownload/: Download.cpp  Download.h  FTP.cpp  Registry.h  downloaddefs.h  ftp.h  registry.cpp  urlBuilder.cpp  urlBuilder.h
Core/Libraries/Source/WWVegas/WWLib/: BSEARCH.h  BUFF.h  CMakeLists.txt  CRC.h  CallbackHook.h  DbgHelpGuard.cpp  DbgHelpGuard.h  DbgHelpLoader.cpp  DbgHelpLoader.h  DbgHelpLoader_minidump.h  Except.cpp  Except.h  FastAllocator.cpp  FastAllocator.h  HASHLIST.h  INDEX.h  INI.h  LISTNODE.h  MPU.h  PIPE.h  Point.h  RAMFILE.h  RANDOM.h  RAWFILE.h  SLIST.h  SLNODE.h  STLUtils.h  STRAW.h  Signaler.h  SystemAllocator.h  TARGA.cpp  TARGA.h  Vector.h  WWCOMUtil.cpp  WWCOMUtil.h  WWCommon.h  WWDefines.h  WWFILE.h  XPIPE.h  XSTRAW.h  (+121 more)
Core/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  DeterministicMath.cpp  DeterministicMath.h  Vector3i.h  aabox.cpp  aabox.h  aabtreecull.cpp  aabtreecull.h  aaplane.h  cardinalspline.cpp  cardinalspline.h  castres.h  catmullromspline.cpp  catmullromspline.h  colmath.cpp  colmath.h  colmathaabox.cpp  colmathaabox.h  colmathaabtri.cpp  colmathfrustum.cpp  colmathfrustum.h  colmathline.cpp  colmathline.h  colmathobbobb.cpp  colmathobbox.cpp  colmathobbtri.cpp  colmathplane.cpp  colmathplane.h  colmathsphere.cpp  cullsys.cpp  cullsys.h  culltype.h  curve.cpp  curve.h  euler.cpp  euler.h  frustum.cpp  frustum.h  gridcull.cpp  gridcull.h  (+40 more)
Core/Libraries/Source/WWVegas/WWSaveLoad/: definition.cpp  definition.h  definitionclassids.h  definitionfactory.cpp  definitionfactory.h  definitionfactorymgr.cpp  definitionfactorymgr.h  definitionmgr.cpp  definitionmgr.h  editable.h  parameter.cpp  parameter.h  parameterlist.h  parametertypes.h  persist.h  persistfactory.cpp  persistfactory.h  pointerremap.cpp  pointerremap.h  postloadable.h  saveload.cpp  saveload.h  saveloadids.h  saveloadstatus.cpp  saveloadstatus.h  saveloadsubsystem.cpp  saveloadsubsystem.h  simpledefinitionfactory.h  simpleparameter.h  twiddler.cpp  twiddler.h  wwsaveload.cpp  wwsaveload.h
Core/Libraries/Source/WWVegas/WWStub/: wwallocstub.cpp  wwdebugstub.cpp
Core/Libraries/Source/WWVegas/osdep/: osdep.h
Core/Libraries/Source/debug/: CMakeLists.txt  debug.h  debug_cmd.cpp  debug_cmd.h  debug_debug.cpp  debug_debug.h  debug_except.cpp  debug_getdefaultcommands.cpp  debug_internal.cpp  debug_io.h  debug_io_con.cpp  debug_io_flat.cpp  debug_io_net.cpp  debug_io_ods.cpp  debug_macro.h  debug_purecall.cpp  debug_stack.cpp  debug_stack.h  debug_stack.inl  debug_stub_nonwindows.cpp  internal.h  internal_except.h  internal_io.h  rc_exception.inl
Core/Libraries/Source/debug/debug_dlg/: debug_dlg.cpp  resource.h
Core/Libraries/Source/debug/netserv/: netserv.cpp
Core/Libraries/Source/debug/test1/: test1.cpp
Core/Libraries/Source/debug/test2/: StdAfx.h  resource.h  test2.cpp
Core/Libraries/Source/debug/test3/: test3.cpp
Core/Libraries/Source/debug/test4/: test4.cpp
Core/Libraries/Source/debug/test5/: test5.cpp
Core/Libraries/Source/debug/test6/: test6.cpp
Core/Libraries/Source/profile/: CMakeLists.txt  internal.h  internal_cmd.h  internal_funclevel.h  internal_highlevel.h  internal_result.h  profile.cpp  profile.h  profile_cmd.cpp  profile_funclevel.cpp  profile_funclevel.h  profile_highlevel.cpp  profile_highlevel.h  profile_result.cpp  profile_result.h  profile_stub_nonwindows.cpp
Core/Libraries/Source/profile/test1/: test1.cpp
Dependencies/Utility/: CMakeLists.txt
Dependencies/Utility/Utility/: CppMacros.h  compat.h  comsupp_compat.h  endian_compat.h  intrin_compat.h  string_compat.h  thread_compat.h  time_compat.h  wchar_compat.h
Generals/Code/Tools/W3DView/: CMakeLists.txt
GeneralsMD/Code/Main/: 3ds.rsf  CMakeLists.txt  SDL3Main.cpp  SwitchPlatformStubs.cpp  ThreeDSPlatformStubs.cpp  WebMain.cpp  WinMain.cpp  WinMain.h  iOSInfo.plist.in  resource.h
GeneralsMD/Code/Main/web/: shell.html
benchmark/: CMakeLists.txt  benchmark_main.cpp  benchmark_out_ascii.txt
ps2-port/bringup/: CMakeLists.txt  main.c
ps2-port/bringup-exceptions/: .gitignore  CMakeLists.txt  main.cpp
ps2-port/bringup-sdl3/: CMakeLists.txt  main.c
(+3750 files in other folders)
