cmake_minimum_required(VERSION 3.25)

# Use packagename_ROOT for FindPackage.
if(POLICY CMP0074)
    cmake_policy(SET CMP0074 NEW)
endif()

# Disable default MSVC setting CRT type so we can set it ourselves.
if(POLICY CMP0091)
    cmake_policy(SET CMP0091 NEW)
endif()

# Disable default MSVC warning level so we can set it ourselves.
if(POLICY CMP0092)
    cmake_policy(SET CMP0092 NEW)
endif()

# Allow specifying MSVC debug configurations.
#if(POLICY CMP0141)
#    cmake_policy(SET CMP0141 NEW)
#endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

include(FeatureSummary)
include(CMakeDependentOption)

# We don't support in tree builds, so help people make the right choice.
if (CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
    message(FATAL_ERROR "Building in-source is not supported! Create a build dir and remove ${CMAKE_SOURCE_DIR}/CMakeCache.txt")
endif()

# Top level project, doesn't really affect anything.
project(genzh LANGUAGES C CXX)

# This file handles extra settings wanted/needed for different compilers.
include(cmake/compilers.cmake)

# Debug symbol stripping for Release builds (MinGW)
include(cmake/debug_strip.cmake)

include(FetchContent)

# MinGW-w64 specific configuration
if(MINGW)
    include(cmake/mingw.cmake)
    include(cmake/reactos-atl.cmake)
    include(cmake/widl.cmake)
endif()

# Find/Add build dependencies and stubs shared by all projects
# TheSuperHackers @build bobtista 13/06/2026 — These stubs are always
# included so that the INTERFACE targets (milesstub, d3d8lib, etc.) and
# their public headers are available on every platform, including Android.
# The actual WIN32 binary link libraries are guarded inside each cmake file.
include(cmake/miles.cmake)
include(cmake/bink.cmake)
include(cmake/dx8.cmake)

# Define a dummy stlport target when not on VC6.
if (IS_VS6_BUILD)
    include(cmake/stlport.cmake)
else()
    add_library(stlport INTERFACE)
endif()

include(cmake/config.cmake)
include(cmake/gamespy.cmake)
include(cmake/lzhl.cmake)

if(SAGE_USE_SDL3)
    include(cmake/sdl3.cmake)
endif()

if(SAGE_USE_OPENAL)
    include(cmake/openal.cmake)
endif()

# Provide FFmpeg once, centrally: a system FFmpeg on desktop/macOS, or a minimal
# audio-only source build on the Android/iOS/Emscripten cross targets. Both the
# OpenAL audio backend and the (optional) FFmpeg video player consume the
# FFMPEG_* variables / FFMPEG::FFMPEG target this sets.
if(SAGE_USE_OPENAL OR RTS_BUILD_OPTION_FFMPEG)
    include(cmake/ffmpeg.cmake)
endif()

# Rendering backend selection. Must come after config.cmake (which sets
# IS_VS6_BUILD) and before Core is added (which references the backend flag).
include(cmake/render-backend.cmake)

# TheSuperHackers @build bobtista 19/04/2026 Propagate the render backend
# compile define globally so all targets can #if on it, not just WW3D2.
if(DEFINED GGC_RENDER_BACKEND_COMPILE_DEFINE)
    add_compile_definitions(${GGC_RENDER_BACKEND_COMPILE_DEFINE})
endif()

if (IS_VS6_BUILD)
    # The original max sdk does not compile against a modern compiler.
    # If there is a desire to make this work, then a fixed max sdk needs to be created.
    add_subdirectory(Dependencies/MaxSDK)
endif()
add_subdirectory(Dependencies/Utility)

# TheSuperHackers @build githubawn 18/06/2026 Make the C++ compatibility macro
# header (CPP_11, FALLTHROUGH, ...) resolvable everywhere as <Utility/CppMacros.h>.
# VC6 force-includes it via /FI; modern builds normally pull it in through the
# precompiled header (it is the first PCH entry). When PCH is disabled (e.g. the
# iOS Xcode-generator build) sources that use the macros must include it directly.
include_directories(Dependencies/Utility)
if (IS_VS6_BUILD)
    add_compile_options(/FIUtility/CppMacros.h)
endif()

add_subdirectory(resources)

add_subdirectory(Core)

# Add main build targets
if(RTS_BUILD_ZEROHOUR)
    add_subdirectory(GeneralsMD)
endif()

if(RTS_BUILD_GENERALS)
    add_subdirectory(Generals)
endif()

feature_summary(WHAT ENABLED_FEATURES DESCRIPTION "Enabled features:")
feature_summary(WHAT DISABLED_FEATURES DESCRIPTION "Disabled features:")
